# yaad

./: .dependency-readiness.json  .gitignore  .surface-analysis.md  .validation-readiness.json  .yaad-investigation-report.md  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  go.mod  go.sum  install.sh  integration_test.go  openapi.yaml  yaad_test.go
.github/workflows/: ci.yml  release.yml
Formula/: yaad.rb
cmd/yaad/: admin.go  bridge.go  core.go  helpers.go  main.go  server.go  tui.go
compact/: compact.go
conflict/: resolver.go
contract-work/: area1-code-quality.md  area2-features.md  area3-tests.md  area4-cross.md  assertion-coverage.md  final-coverage.md
dedup/: window.go
embeddings/: defaults.go  defaults_test.go  memo.go  memo_test.go  provider.go  ratelimit.go  ratelimit_test.go
engine/: access_tracker.go  budget.go  decay.go  engine_test.go  feedback.go  fused_recall.go  fused_recall_test.go  llm_entities.go  memory.go  proactive.go  profile.go  profile_test.go  query.go  query_test.go  rerank.go  search.go  selflink.go  session.go  stats.go
exportimport/: export.go
git/: watcher.go
graph/: graph.go  graph_test.go
hooks/: runner.go
ingest/: dual_stream.go
internal/bench/: bench.go
mental/: model.go
privacy/: filter.go
profile/: profile.go
sdk/python/: README.md  pyproject.toml
sdk/python/yaad/: __init__.py
skill/: skill.go
storage/: codeindex.go  codeindex_test.go  interface.go  interface_test.go  sqlite.go  sqlite_test.go  vectors.go
temporal/: backbone.go
(+73 files in other folders)
