[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaad"
version = "0.1.0"
description = "Python SDK for Yaad — persistent memory for coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "GrayCodeAI", email = "hello@graycode.ai"}]
keywords = ["yaad", "memory", "coding-agent", "mcp", "graph", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/GrayCodeAI/yaad"
Repository = "https://github.com/GrayCodeAI/yaad"
Issues = "https://github.com/GrayCodeAI/yaad/issues"

[tool.setuptools.packages.find]
include = ["yaad*"]
